# hierarchicaldata

./: README.md  db.sqlite3  pyproject.toml
data/: asgi.py  settings.py  urls.py  wsgi.py
mydata/: admin.py  models.py  views.py
mydata/migrations/: 0001_initial.py  0002_auto_20200921_2301.py
templates/: index.html
